feat: add different techniques to deal with race conditions